--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@
 
 # Directories
 .terraform/
-/.terraform/*
+/.terraform/**
 #.vagrant/
 
 # SSH Keys
@@ -20,7 +20,7 @@
 *.bak
 
 # Ignored Terraform files
-*gitignore*.tf
+*gitignore*
 
 # Ignore Mac .DS_Store files
 #.DS_Store
